tests/snapshots/snapshots__pipeline@alias_unknown.pr.snap
---
source: tests/snapshots.rs
expression: "tiny_prism::report(&src)"
input_file: tests/cases/alias_unknown.pr
---
== tokens ==
VOpen Effect UIdent("Tick") LBrace Ctl Ident("tick") LParen KwUnit RParen Colon KwInt RBrace VSemi Alias UIdent("App") Eq LBrace UIdent("Tick") Comma UIdent("Missing") RBrace VSemi Fn Ident("main") LParen RParen Eq Ident("println") LParen Int(IntLit { value: 1, suffix: None }) RParen VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "Tick",
            params: [],
            ops: [
                EffOp {
                    name: "tick",
                    params: [
                        Unit,
                    ],
                    ret: Int,
                },
            ],
            span: 0..38,
        },
    ],
    errors: [],
    aliases: [
        AliasDecl {
            name: "App",
            labels: [
                EffLabel {
                    name: "Tick",
                    args: [],
                },
                EffLabel {
                    name: "Missing",
                    args: [],
                },
            ],
            span: 40..67,
        },
    ],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 81..88,
                    },
                    [
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 1,
                                    suffix: None,
                                },
                            ),
                            span: 89..90,
                        },
                    ],
                ),
                span: 81..91,
            },
            wheres: [],
            span: 69..91,
        },
    ],
}

== types ==
Type Error: unknown effect `Missing` in alias `App`
   ╭─[ <source>:5:1 ]
   │
 5 │ alias App = {Tick, Missing}
   │ ─────────────┬─────────────  
   │              ╰─────────────── unknown effect `Missing` in alias `App`
───╯
